1.standardized treatment. 2.update doc api.
